log
Wed Apr 12 10:31:42 AM -04 2023: 
 list.c | 126 +++++++++++++++++++++++++++++++++++++++++++----------------------
 1 file changed, 83 insertions(+), 43 deletions(-)
In file included from test.c:5:
list.c: In function ‘popFront’:
list.c:131:1: error: control reaches end of non-void function [-Werror=return-type]
  131 | }
      | ^
list.c: In function ‘popBack’:
list.c:139:1: error: control reaches end of non-void function [-Werror=return-type]
  139 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
f391440
Wed Apr 12 10:34:25 AM -04 2023: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|0
a94a86d
Wed Apr 12 10:38:05 AM -04 2023: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
d556efc
